# darkroute

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
authority/: .env.example  go.mod
authority/cmd/authority/: main.go
authority/internal/auth/: jwt.go  jwt_test.go  password.go  password_test.go  session.go  session_test.go
authority/internal/blind/: blind.go  blind_test.go
authority/internal/config/: config.go  config_test.go
authority/internal/db/: db.go
authority/internal/handlers/: account.go  admin.go  auth.go  circuits.go  circuits_test.go  health.go  middleware.go  relay.go  relay_test.go  tokens.go  tokens_test.go
authority/internal/models/: models.go
authority/internal/relay/: relay.go  relay_test.go
authority/migrations/: 001_initial.down.sql  001_initial.up.sql  002_relay_role.down.sql  002_relay_role.up.sql  003_subscription_pending_review.down.sql  003_subscription_pending_review.up.sql  004_circuit_assignments.down.sql  004_circuit_assignments.up.sql  005_token_issuance_events.down.sql  005_token_issuance_events.up.sql
client/: .env.example  Cargo.toml
client/src/: auth.rs  blind.rs  circuits.rs  dial.rs  error.rs  lib.rs  tls.rs  tokens.rs
darkroute-client/: Cargo.toml
darkroute-client/src/: main.rs  socks5.rs
darkroute-client/tests/: live_circuit.rs
darkroute-crypto/: Cargo.toml
darkroute-crypto/src/: cell.rs  crypto.rs  lib.rs  wire.rs
dashboard/: components.json  next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/(app)/account/: page.tsx
dashboard/src/app/(app)/admin/: page.tsx
dashboard/src/app/(app)/circuits/: page.tsx
dashboard/src/app/(app)/connections/: page.tsx
dashboard/src/app/(app)/dashboard/: page.tsx
dashboard/src/app/(app)/keys/: page.tsx
dashboard/src/app/(app)/tokens/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/components/: app-shell.tsx  auth-shell.tsx  marketing.tsx  providers.tsx
dashboard/src/components/visuals/: activity-timeline.tsx  animated-counter.tsx  circuit-diagram.tsx  live-pulse.tsx  mesh-diagram.tsx  metric-card.tsx  network-mesh.tsx  sparkline.tsx
dashboard/src/lib/: api.ts  format.ts  queries.ts  store.ts  types.ts
relay/: Cargo.toml
relay/src/: authority.rs  cell.rs  circuit.rs  config.rs  crypto.rs  exit.rs  heartbeat.rs  integration_test.rs  main.rs  metrics.rs  pool.rs  port80.rs  tls.rs  token.rs
