[package]
name = "darkroute-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "darkroute-client"
path = "src/main.rs"

[dependencies]
darkroute-client-sdk = { path = "../client" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
