[package]
name = "darkroute-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal", "sync"] }
rsa = "0.9"
sha2 = "0.10"
num-bigint = "0.4"
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
url = "2"
x25519-dalek = { version = "2", features = ["getrandom"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio-socks = "0.5"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-acme = { version = "0.13", default-features = false, features = ["ring", "tokio"] }
rustls-native-certs = "0.8"
futures-util = "0.3"

[dev-dependencies]
rcgen = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
