[package]
name = "darkroute-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
darkroute-crypto = { path = "../darkroute-crypto" }
tokio = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
num-bigint = { workspace = true }
prometheus = { version = "0.13", default-features = false }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
rand_core = { workspace = true }
tokio-socks = "0.5"
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-acme = { version = "0.13", default-features = false, features = ["ring", "tokio"] }
rustls-native-certs = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
rcgen = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
